[gd_scene format=3 uid="uid://c7onnyw72ot4a"]

[ext_resource type="Script" uid="uid://up8qryv0xepx" path="res://scripts/enemy.gd" id="1_7p1mj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_md0e3"]

[sub_resource type="SphereMesh" id="SphereMesh_4ra3w"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7p1mj"]
height = 0.5
radius = 10.0

[node name="Enemy" type="CharacterBody3D" unique_id=1293850703]
script = ExtResource("1_7p1mj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=815780722]
shape = SubResource("SphereShape3D_md0e3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=267587579]
mesh = SubResource("SphereMesh_4ra3w")

[node name="VisionArea" type="Area3D" parent="." unique_id=861444661]

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea" unique_id=525354468]
shape = SubResource("CylinderShape3D_7p1mj")

[node name="VisionTimer" type="Timer" parent="." unique_id=1538205145]
wait_time = 0.25
autostart = true

[node name="VisionRayCast" type="RayCast3D" parent="." unique_id=1185779398]
target_position = Vector3(100, 0, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)
debug_shape_thickness = 5

[node name="DebugLine" type="MeshInstance3D" parent="." unique_id=1574811856]

[connection signal="timeout" from="VisionTimer" to="." method="_on_vision_timer_timeout"]
